k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gowatchit
  name: gowatchit
  namespace: gowatchit
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: gowatchit
  sessionAffinity: None
  type: ClusterIP
